[gd_scene load_steps=4 format=3 uid="uid://ds2xhwyqp3awj"]

[ext_resource type="Script" uid="uid://cjhsi3wk1hfo7" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="AudioStream" uid="uid://bvg0qt5ghfapf" path="res://assets/sounds/ak47_firing.mp3" id="3_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(28, 54)

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_3vyb7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
limit_left = -1600
limit_top = -800
limit_right = 1600
limit_bottom = 800
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
color = Color(0.18039216, 0.8, 0.44313726, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g2els")

[node name="WeaponHolder" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="Ak47Firing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")
mix_target = 2

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
volume_db = 20.0
